apps/votingapp/k8s-manifests/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: 849296354115.dkr.ecr.eu-central-1.amazonaws.com/votingapp-vote:latest
        name: vote
        ports:
        - containerPort: 80
          name: vote
