apps/votingapp/k8s-manifests/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: 49296354115.dkr.ecr.eu-central-1.amazonaws.com/votingapp-worker:latest
        name: worker
