apps/votingapp/k8s-manifests/ingressrule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: vote
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 5000
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 5001
